WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
195752
REGRESSION(
r242841
): Fix conservative DFG OSR entry validation to accept values which will be stored in AnyInt / Double flush formats
https://bugs.webkit.org/show_bug.cgi?id=195752
Summary
REGRESSION(r242841): Fix conservative DFG OSR entry validation to accept valu...
Yusuke Suzuki
Reported
2019-03-14 11:35:00 PDT
[JSC] DFG OSR entry tends to reject Double and AnyInt values
Attachments
Patch
(17.74 KB, patch)
2019-03-14 11:48 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(17.74 KB, patch)
2019-03-14 13:22 PDT
,
Yusuke Suzuki
saam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-03-14 11:48:38 PDT
Created
attachment 364670
[details]
Patch
Yusuke Suzuki
Comment 2
2019-03-14 13:22:50 PDT
Created
attachment 364680
[details]
Patch
Saam Barati
Comment 3
2019-03-14 18:49:09 PDT
Comment on
attachment 364680
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364680&action=review
> Source/JavaScriptCore/ChangeLog:3 > + [JSC] DFG OSR entry tends to reject Double and AnyInt values
nit: this makes it seem like this is a longstanding issue. It's not. It regressed only recently. It'd be good for this title to acknowledge that this just regressed.
> Source/JavaScriptCore/ChangeLog:8 > + We fix the bug skipping AbstractValue validations when the flush format is Double or AnyInt. But it
you should say what revision. "fix" => "fixed"
Yusuke Suzuki
Comment 4
2019-03-14 22:41:30 PDT
Comment on
attachment 364680
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=364680&action=review
Thanks!
>> Source/JavaScriptCore/ChangeLog:3 >> + [JSC] DFG OSR entry tends to reject Double and AnyInt values > > nit: this makes it seem like this is a longstanding issue. It's not. It regressed only recently. It'd be good for this title to acknowledge that this just regressed.
Sounds nice! I changed the title to "REGRESSION(
r242841
): Fix conservative DFG OSR entry validation to accept values which will be stored in AnyInt / Double flush formats"
>> Source/JavaScriptCore/ChangeLog:8 >> + We fix the bug skipping AbstractValue validations when the flush format is Double or AnyInt. But it > > you should say what revision. > "fix" => "fixed"
Fixed.
Yusuke Suzuki
Comment 5
2019-03-14 22:45:15 PDT
Committed
r242990
: <
https://trac.webkit.org/changeset/242990
>
Radar WebKit Bug Importer
Comment 6
2019-03-14 22:46:18 PDT
<
rdar://problem/48916051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug