Source/JavaScriptCore/dfg/DFGAbstractValue.h
@@ -30,6 +30,7 @@
 #include "ArrayProfile.h"
 #include "DFGAbstractValueClobberEpoch.h"
 #include "DFGFiltrationResult.h"
+#include "DFGFlushFormat.h"
 #include "DFGFrozenValue.h"
 #include "DFGNodeFlags.h"
 #include "DFGStructureAbstractValue.h"
@@ -369,7 +370,7 @@ struct AbstractValue {
     
     bool contains(RegisteredStructure) const;
 
-    bool validate(JSValue value) const
+    bool validateOSREntryValue(JSValue value, FlushFormat format) const
     {
         if (isHeapTop())
             return true;
@@ -377,12 +378,17 @@ struct AbstractValue {
         if (!!m_value && m_value != value)
             return false;
         
-        if (mergeSpeculations(m_type, speculationFromValue(value)) != m_type)
-            return false;
-        
-        if (value.isEmpty()) {
-            ASSERT(m_type & SpecEmpty);
-            return true;
+        if (format == FlushedInt52) {
+            if (!validateTypeAcceptingBoxedInt52(value))
+                return false;
+        } else {
+            if (mergeSpeculations(m_type, speculationFromValue(value)) != m_type)
+                return false;
+            
+            if (value.isEmpty()) {
+                ASSERT(m_type & SpecEmpty);
+                return true;
+            }
         }
         
         if (!!value && value.isCell()) {
@@ -490,7 +496,7 @@ private:
             m_arrayModes |= to;
     }
     
-    bool validateType(JSValue value) const
+    bool validateTypeAcceptingBoxedInt52(JSValue value) const
     {
         if (isHeapTop())
             return true;
